# ash

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build.yaml  publish.yaml
src/: archiver.rs  cli.rs  extractor.rs  format.rs  main.rs
src/archiver/: lha.rs  rar.rs  sevenz.rs  tar.rs  zip.rs
src/extractor/: lha.rs  sevenz.rs  tar.rs
