[package]
name = "ash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
bzip2 = "0.4.4"
delharc = "0.6.1"
flate2 = "1.0.29"
sevenz-rust = "0.6.0"
tar = "0.4.40"
time = "0.3.36"
unrar = "0.5.3"
xz2 = "0.1.7"
zip = "2.1.0"
zstd = "0.13.1"

rpassword = "7.2"
rust-crypto = "^0.2"
aes-stream = "0.2.1"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
